// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsModal renders with settings off 1`] = `
<div
  className="settings-modal-container"
>
  <div
    className="settings-modal-api-enabled"
  >
    <div
      className="checkbox"
    >
      <input
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="label-wrapper"
      onClick={[Function]}
    >
      <span
        className="label"
      >
        Is API Enabled
      </span>
    </div>
  </div>
  <div
    className="settings-modal-default-text"
  >
    <div
      className="text"
    >
      <input
        onInput={[Function]}
        placeholder="Default Text"
        type="text"
        value="Hello there"
      />
    </div>
  </div>
</div>
`;

exports[`SettingsModal renders with settings on 1`] = `
<div
  className="settings-modal-container"
>
  <div
    className="settings-modal-api-enabled"
  >
    <div
      className="checkbox"
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="label-wrapper"
      onClick={[Function]}
    >
      <span
        className="label"
      >
        Is API Enabled
      </span>
    </div>
  </div>
  <div
    className="settings-modal-default-text"
  >
    <div
      className="text"
    >
      <input
        onInput={[Function]}
        placeholder="Default Text"
        type="text"
        value="Hello there"
      />
    </div>
  </div>
</div>
`;
